# belladonna

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: cmake.yml  makefile.yml
src/: CMakeLists.txt  diffgen.cpp  diffgen.h  fuse_ops.c  opts.h  unionfs.c  unionfs.cpp
src/include/: belladonna.h
